# exercise-c-cpp

./: .gitignore  README.md
c-inline/: c_inline.c
c-static/: CMakeLists.txt
dice_2206/: CMakeLists.txt  main.c
docs/: multi_git_sshkey.md
hanoi_2206/: CMakeLists.txt
memory_order/: CMakeLists.txt  README.md  acquire.cpp  consume.cpp  release.cpp  seq_cst.cpp
missing/c-inline/: .clang-format  CMakeLists.txt  README.md
missing/c-static/: README.md  static_global_var_func.c  static_local_var.c
missing/memory_order/: .clang-format  README.md  acq_rel.cpp  relaxed.cpp
missing/uio/: CMakeLists.txt  README.md  http.c  writev.c
projects/ai_poker_2206/: CMakeLists.txt
projects/dice_2206/: CMakeLists.txt
projects/dp-frog/: CMakeLists.txt  dp-frog-relaxation.cpp  dp-frog.cpp
projects/eight_queens_2206/: CMakeLists.txt  README.md  main.cpp  queen.cpp  queen.h
projects/hanoi_2206/: CMakeLists.txt  hanoi_2206.c
projects/knight_tour_2206/: .clang-format  CMakeLists.txt  README.md  knight_tour.cpp  knight_tour.h  main.cpp
projects/maze_problem_2206/: .clang-format  CMakeLists.txt  README.md  main.cpp  maze_problem.pptx
projects/maze_problem_2206/docs/: ALGORITHM_COMPARISON.md  SPACESHIP_OPERATOR.md  TEMPLATE_PARAMETERS.md  TEMPLATE_VS_RUNTIME.md
projects/maze_problem_2206/include/: maze.hpp  maze_generator.hpp  position.hpp
projects/maze_problem_2206/src/: maze.tpp
projects/pocker_2206/: CMakeLists.txt
projects/poker_2206/: CMakeLists.txt  README.md
projects/poker_2206/include/: Card.h  Deck.h  Game.h  Hand.h  HandComparator.h  HandEvaluator.h  Player.h
projects/poker_2206/src/: Card.cpp  Deck.cpp  Game.cpp  Hand.cpp  HandComparator.cpp  HandEvaluator.cpp  Player.cpp  main.cpp
projects/ticket_2206/: CMakeLists.txt  ticket.c  ticket_2206.c
projects/tortoise_hare_2206/: CMakeLists.txt  README.md  main.cpp
projects/tortoise_hare_2206/docs/: CPP_MODERN_FEATURES.md  include-path-guide.md
projects/tortoise_hare_2206/include/: Constants.h  Hare.h  Race.h  Racer.h  RacerConcept.h  RandomGenerator.h  Tortoise.h
projects/tortoise_hare_2206/src/: Hare.cpp  Racer.cpp  RandomGenerator.cpp  Tortoise.cpp
projects/turtle_2206/: CMakeLists.txt  turtle.c
projects/turtle_rabbit_2206/: CMakeLists.txt
projects/vm_2206/: .clang-format  CMakeLists.txt  README.md  vm.pptx
projects/vm_2206/docs/: CPP20_FEATURES.md  CPP_CONTAINERS.md  CPP_REFERENCE_IMPLEMENTATION.md  DESIGN_PATTERNS_DEEP_DIVE.md  ENUM_CLASS.md  INSTRUCTION_SET.md  IP_VS_PC.md  MEMBER_VARIABLE_NAMING.md  PC_INITIALIZATION.md  STD_OPTIONAL.md
projects/vm_2206/include/: IInstruction.h  InstructionFactory.h  Instructions.h  OpCode.h  ProgramBuilder.h  VMContext.h  VirtualMachine.h
projects/vm_2206/include/vm/: IInstruction.h  InstructionFactory.h  Instructions.h  OpCode.h  ProgramBuilder.h  VMContext.h  VirtualMachine.h
projects/vm_2206/src/: InstructionFactory.cpp  Instructions.cpp  ProgramBuilder.cpp  VirtualMachine.cpp  main.cpp
projects/volatile/: CMakeLists.txt  README.md  volatile.c
ticket_2206/: CMakeLists.txt  main.c  ticket_2206.c
turtle_2206/: .clang-format  CMakeLists.txt  main.c
uio/: readv.c
